compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_logical_wrong_types.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 and false

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..24, state: Error(WrongType) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(WrongType, 15..18)

error at 15..18: wrong type for compile-time expression

