compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_negative_int_exp.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 2 ** -1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..18 }, state: Error(ConstError { kind: NegativeIntExp, span: Span { file: None, range: 13..15 } }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: NegativeIntExp, span: Span { file: None, range: 13..15 } }

error at 13..15: raising integer to a negative exponent

