compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_negative_int_shift-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 2 shr -1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..19 }, state: Error(ConstError { kind: NegativeIntShift, span: Span { file: None, range: 13..16 } }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: NegativeIntShift, span: Span { file: None, range: 13..16 } }

error at 13..16: bit shifting integer by a negative amount

