compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_negative_int_shift.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 20
expression: 2 shl -1

---
"_"@(FileId(1), 6..7) -> ConstError { kind: NegativeIntShift, span: (FileId(1), 13..16) }

error in file FileId(1) at 13..16: cannot compute expression at compile-time
| error in file FileId(1) for 13..16: bit shifting integer by a negative amount

