compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_no_const_expr.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "var a := 1\nconst b := a\n"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 22..24, state: Error(NoConstExpr(4..5)) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(1)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(NoConstExpr(4..5), 22..24)

error at 22..24: reference cannot be computed at compile-time
| info for 4..5: reference declared here

