compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_no_fields_enum-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
assertion_line: 12
expression: "type e : enum() const _ := e.o"

---
"_"@(FileId(1), 22..23) -> ConstError { kind: NoFields("o"), span: (FileId(1), 29..30) }

error in file FileId(1) at 29..30: cannot compute expression at compile-time
| error in file FileId(1) for 29..30: no field `o` in expression

